// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asyncOperationStateUtils bulkUpdateAsyncOperations should update state with multiple async operations: state with multiple asyncOperations 1`] = `
Object {
  "UPDATE_PERSON_DATA_111": Object {
    "dataStatus": "PRESENT",
    "descriptorId": "UPDATE_PERSON_DATA",
    "fetchStatus": "SUCCESSFUL",
    "lastDataStatusTime": "2018-10-01T19:12:53.189Z",
    "lastFetchStatusTime": "2018-10-01T19:12:46.189Z",
    "message": null,
    "personId": 111,
  },
  "UPDATE_TEAM_DATA_2": Object {
    "dataStatus": "PRESENT",
    "descriptorId": "UPDATE_TEAM_DATA",
    "fetchStatus": "SUCCESSFUL",
    "lastDataStatusTime": "2018-10-01T19:12:27.189Z",
    "lastFetchStatusTime": "2018-10-01T19:12:26.189Z",
    "message": null,
    "teamId": 2,
  },
}
`;

exports[`asyncOperationStateUtils getAsyncOperation should invalidate an async operation if an invalidatingAsyncOperation shares the same descriptorId: well formed initial read async operation 1`] = `
Object {
  "appointmentId": 111,
  "dataStatus": "ABSENT",
  "descriptorId": "FETCH_APPOINTMENT_DATA",
  "fetchStatus": "NULL",
  "lastDataStatusTime": 0,
  "lastFetchFailed": false,
  "lastFetchStatusTime": 0,
  "message": null,
}
`;

exports[`asyncOperationStateUtils getAsyncOperation should invalidate async operation if an invalidatingAsyncOperation is a write async operation and has a fetchStatus timestamp after async operation fetchStatus timestamp: well formed initial read asyncOperation 1`] = `
Object {
  "dataStatus": "ABSENT",
  "descriptorId": "FETCH_CALENDAR_DATA",
  "fetchStatus": "NULL",
  "lastDataStatusTime": 0,
  "lastFetchFailed": false,
  "lastFetchStatusTime": 0,
  "message": null,
  "orgId": 33,
}
`;

exports[`asyncOperationStateUtils getAsyncOperation should return a pending asyncOperation: well formed pending asyncOperation 1`] = `
Object {
  "dataStatus": "ABSENT",
  "descriptorId": "FETCH_PERSON_DATA",
  "fetchStatus": "PENDING",
  "lastDataStatusTime": "2018-10-01T19:12:13.189Z",
  "lastFetchStatusTime": "2018-10-01T19:12:46.189Z",
  "message": null,
  "personId": 111,
}
`;

exports[`asyncOperationStateUtils getAsyncOperation should return a successful asyncOperation with parentAsyncOperation metaData two levels deep: well formed successful asyncOperation with parentAsyncOperation metaData two levels deep 1`] = `
Object {
  "dataStatus": "PRESENT",
  "descriptorId": "FETCH_PERSON_DATA",
  "fetchStatus": "SUCCESSFUL",
  "lastDataStatusTime": "2018-10-01T19:23:56.189Z",
  "lastFetchStatusTime": "2018-10-01T19:16:52.189Z",
  "message": null,
  "personId": 111,
}
`;

exports[`asyncOperationStateUtils getAsyncOperation should return a successful asyncOperation with parentAsyncOperation metaData: well formed successful asyncOperation with parentAsyncOperation metaData 1`] = `
Object {
  "dataStatus": "PRESENT",
  "descriptorId": "FETCH_PERSON_DATA",
  "fetchStatus": "SUCCESSFUL",
  "lastDataStatusTime": "2018-10-01T19:13:56.189Z",
  "lastFetchStatusTime": "2018-10-01T19:13:52.189Z",
  "message": null,
  "personId": 111,
}
`;

exports[`asyncOperationStateUtils getAsyncOperation should return a successful asyncOperation: well formed successful asyncOperation 1`] = `
Object {
  "dataStatus": "PRESENT",
  "descriptorId": "FETCH_PERSON_DATA",
  "fetchStatus": "SUCCESSFUL",
  "lastDataStatusTime": "2018-10-01T19:12:53.189Z",
  "lastFetchStatusTime": "2018-10-01T19:12:46.189Z",
  "message": null,
  "personId": 111,
}
`;

exports[`asyncOperationStateUtils getAsyncOperation should return an initial read asyncOperation: well formed initial asyncOperation 1`] = `
Object {
  "dataStatus": "ABSENT",
  "descriptorId": "FETCH_PERSON_DATA",
  "fetchStatus": "NULL",
  "lastDataStatusTime": 0,
  "lastFetchFailed": false,
  "lastFetchStatusTime": 0,
  "message": null,
  "personId": 111,
}
`;

exports[`asyncOperationStateUtils getAsyncOperation should return an initial write asyncOperation: well formed initial asyncOperation 1`] = `
Object {
  "descriptorId": "UPDATE_PERSON_DATA",
  "fetchStatus": "NULL",
  "lastFetchStatusTime": 0,
  "message": null,
  "personId": 111,
}
`;

exports[`asyncOperationStateUtils updateAsyncOperation should update state with an asyncOperation: state with well formed asyncOperation 1`] = `
Object {
  "UPDATE_PERSON_DATA_111": Object {
    "descriptorId": "UPDATE_PERSON_DATA",
    "fetchStatus": "SUCCESSFUL",
    "lastDataStatusTime": "2018-10-01T19:12:53.189Z",
    "lastFetchStatusTime": "2018-10-01T19:12:46.189Z",
    "message": null,
    "personId": 111,
  },
}
`;

exports[`asyncOperationStateUtils updateAsyncOperationDescriptor should update state with an asyncOperationDescriptor: state with well formed asyncOperationDescriptor 1`] = `
Object {
  "UPDATE_PERSON_DATA": Object {
    "alwaysImmutable": false,
    "debug": false,
    "descriptorId": "UPDATE_PERSON_DATA",
    "invalidatingOperationsDescriptorIds": null,
    "maxCacheTime": 60000,
    "minCacheTime": 5000,
    "operationType": "WRITE",
    "parentOperationDescriptorId": null,
    "requiredParams": Array [
      "personId",
    ],
  },
}
`;
